--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,10 @@
 Changelog
 =========
 
-2.13.1 (unreleased)
+2.14.0 (unreleased)
 -------------------
 
+- TBD
 
 2.13.0 (2010-03-30)
 -------------------
